# deadbeef

./: configure.ac  deadbeef.h  meson.build  meson_options.txt  native-clang.txt  plugins.c  plugins.h  premake5.lua
icons/: meson.build
pixmaps/: meson.build
plugins/aac/: meson.build
plugins/adplug/: meson.build
plugins/alac/: meson.build
plugins/alsa/: meson.build
plugins/artwork/: meson.build
plugins/artwork-legacy/: meson.build
plugins/converter/: meson.build
plugins/dca/: meson.build
plugins/dsp_libsrc/: meson.build
plugins/dumb/: meson.build
plugins/ffap/: meson.build
plugins/ffmpeg/: meson.build
plugins/flac/: meson.build
plugins/gme/: meson.build
plugins/gtkui/: Makefile.am  actionhandlers.c  actions.c  callbacks.c  ddbseekbar.c  ddbseekbar.h  ddbvolumebar.c  ddbvolumebar.h  deadbeefapp.c  deadbeefapp.h  gtkui.c  gtkui.h  meson.build  widgets.c
plugins/hotkeys/: hotkeys.c  meson.build
plugins/lastfm/: meson.build
plugins/liboggedit/: meson.build
plugins/libparser/: meson.build
plugins/lyrics/: meson.build
plugins/m3u/: meson.build
plugins/medialib/: meson.build
plugins/mms/: meson.build
plugins/mono2stereo/: meson.build
plugins/mp3/: meson.build
plugins/musepack/: meson.build
plugins/notify/: meson.build
plugins/nullout/: meson.build
plugins/opus/: meson.build
plugins/oss/: meson.build
plugins/pltbrowser/: meson.build
plugins/psf/: meson.build
plugins/pulse/: meson.build
plugins/rg_scanner/: meson.build
plugins/sc68/: meson.build
plugins/shellexec/: meson.build
plugins/shellexecui/: meson.build
plugins/shn/: meson.build
plugins/sid/: meson.build
plugins/sndfile/: meson.build
plugins/soundtouch/: meson.build
plugins/statusnotifier/: meson.build
plugins/supereq/: meson.build
plugins/tta/: meson.build
plugins/vfs_curl/: meson.build
plugins/vfs_zip/: meson.build
plugins/vorbis/: meson.build
plugins/vtx/: meson.build
plugins/wavpack/: meson.build
plugins/wildmidi/: meson.build
plugins/wma/: meson.build
shared/: meson.build
shared/analyzer/: meson.build
shared/filereader/: meson.build
shared/scope/: meson.build
shared/scriptable/: meson.build
shared/undo/: meson.build
src/: meson.build
