option('plugin-alsa',
       type : 'feature',
       value: 'enabled',
       description : 'ALSA plugin')
option('plugin-pulse',
       type : 'feature',
       value: 'enabled',
       description : 'PulseAudio plugin')
option('plugin-adplug',
       type : 'feature',
       value: 'enabled',
       description : 'Adplug plugin')
option('plugin-flac',
       type : 'feature',
       value: 'enabled',
       description : 'FLAC plugin')
option('plugin-alac',
       type : 'feature',
       value: 'enabled',
       description : 'ALAC plugin')
option('plugin-mp3',
       type : 'feature',
       value: 'enabled',
       description : 'MP3 plugin')
option('plugin-aac',
       type : 'feature',
       value: 'enabled',
       description : 'AAC plugin (using FAAD2)')
option('plugin-sndfile',
       type : 'feature',
       value: 'enabled',
       description : 'sndfile plugin')
option('plugin-soundtouch',
       type : 'feature',
       value: 'enabled',
       description : 'soundtouch plugin')
option('plugin-opus',
       type : 'feature',
       value: 'enabled',
       description : 'OPUS plugin')
option('plugin-vorbis',
       type : 'feature',
       value: 'enabled',
       description : 'Vorbis plugin')
option('plugin-gtk3',
       type : 'feature',
       value: 'enabled',
       description : 'GTK3 GUI plugin')
option('plugin-gtk2',
       type : 'feature',
       value: 'enabled',
       description : 'GTK2 GUI plugin')
