option('plugin-alsa',
       type : 'feature',
       value: 'enabled',
       description : 'ALSA plugin')
option('plugin-pulse',
       type : 'feature',
       value: 'enabled',
       description : 'PulseAudio plugin')
option('plugin-adplug',
       type : 'feature',
       value: 'enabled',
       description : 'Adplug plugin')
option('plugin-flac',
       type : 'feature',
       value: 'enabled',
       description : 'FLAC plugin')
option('plugin-alac',
       type : 'feature',
       value: 'enabled',
       description : 'ALAC plugin')
option('plugin-dca',
       type : 'feature',
       value: 'enabled',
       description : 'libdca (DTS Audio) plugin')
option('plugin-dsp_libsrc',
       type : 'feature',
       value: 'enabled',
       description : 'dsp_libsrc (libsamplerate) plugin')
option('plugin-mp3',
       type : 'feature',
       value: 'enabled',
       description : 'MP3 plugin')
option('plugin-dumb',
       type : 'feature',
       value: 'enabled',
       description : 'DUMB module plugin, for MOD, S3M, etc')
option('plugin-aac',
       type : 'feature',
       value: 'enabled',
       description : 'AAC plugin (using FAAD2)')
option('plugin-sndfile',
       type : 'feature',
       value: 'enabled',
       description : 'sndfile plugin')
option('plugin-soundtouch',
       type : 'feature',
       value: 'enabled',
       description : 'soundtouch plugin')
option('plugin-opus',
       type : 'feature',
       value: 'enabled',
       description : 'OPUS plugin')
option('plugin-vorbis',
       type : 'feature',
       value: 'enabled',
       description : 'Vorbis plugin')
option('plugin-gtk3',
       type : 'feature',
       value: 'enabled',
       description : 'GTK3 GUI plugin')
option('plugin-gtk2',
       type : 'feature',
       value: 'enabled',
       description : 'GTK2 GUI plugin')
option('plugin-rg_scanner',
       type : 'feature',
       value: 'enabled',
       description : 'Plugin for ReplayGain scanner support')
option('plugin-ffap',
       type : 'feature',
       value: 'enabled',
       description : 'Monkey\'s audio (APE) decoder')
option('plugin-ffmpeg',
       type : 'feature',
       value: 'enabled',
       description : 'ffmpeg codecs')
option('plugin-gme',
       type : 'feature',
       value: 'enabled',
       description : 'chiptune music player based on GME')
option('plugin-hotkeys',
       type : 'feature',
       value: 'enabled',
       description : 'Local and global hotkeys support')
option('plugin-lastfm',
       type : 'feature',
       value: 'enabled',
       description : 'last.fm scrobbler')
option('plugin-m3u',
       type : 'feature',
       value: 'enabled',
       description : 'M3U and PLS playlist support')
option('plugin-mms',
       type : 'feature',
       value: 'enabled',
       description : 'mms streaming support')
option('plugin-mono2stereo',
       type : 'feature',
       value: 'enabled',
       description : 'mono2stereo DSP plugin')
option('plugin-musepack',
       type : 'feature',
       value: 'enabled',
       description : 'musepack player plugin')
option('plugin-notify',
       type : 'feature',
       value: 'enabled',
       description : 'notification-daemon support plugin')
option('plugin-nullout',
       type : 'feature',
       value: 'enabled',
       description : 'NULL output')
option('plugin-oss',
       type : 'feature',
       value: 'enabled',
       description : 'oss output plugin')
option('plugin-pltbrowser',
       type : 'feature',
       value: 'enabled',
       description : 'playlist browser gui plugin')
option('plugin-psf',
       type : 'feature',
       value: 'enabled',
       description : 'PSF player, using Audio Overload SDK')
option('plugin-sc68',
       type : 'feature',
       value: 'enabled',
       description : 'sc68 Atari ST And Amiga player')
option('plugin-shellexec',
       type : 'feature',
       value: 'enabled',
       description : 'shell commands plugin')
option('plugin-shellexecui',
       type : 'feature',
       value: 'enabled',
       description : 'GTK user interface for setting up shellexec plugin')
option('plugin-shn',
       type : 'feature',
       value: 'enabled',
       description : 'SHN plugin based on xmms-shn')
option('plugin-sid',
       type : 'feature',
       value: 'enabled',
       description : 'SID player based on libsidplay2')
option('plugin-supereq',
       type : 'feature',
       value: 'enabled',
       description : 'Equalizer based on Super EQ library by Naoki Shibata')
option('plugin-tta',
       type : 'feature',
       value: 'enabled',
       description : 'TTA player plugin')
