deadbeef_sources = [
	'actionhandlers.c',
	'buffered_file_writer.c',
	'coreplugin.c',
	'conf.c',
	'cueutil.c',
  'playlist.c',
	'decodedblock.c',
	'dsp.c',
	'dsppreset.c',
	'escape.c',
	'../external/wcwidth/wcwidth.c',
	'fft.c',
	'handler.c',
	'junklib.c',
  'utf8.c',
	'logger.c',
	'main.c',
	'md5/md5.c',
	'messagepump.c',
	'metacache.c',
	'playmodes.c',
	'playqueue.c',
	'plmeta.c',
	'pltmeta.c',
	'plugins.c',
	'premix.c',
	'replaygain.c',
	'resizable_buffer.c',
	'ringbuf.c',
	'sort.c',
	'streamer.c',
	'streamreader.c',
	'tf.c',
	'threading_pthread.c',
	'vfs.c',
  'vfs_stdio.c',
	'volume.c',
	'viz.c',
	'undo/undo_playlist.c',
]


executable('deadbeef',
  deadbeef_sources,
  install: true,
  #c_args : cc_flags,
  include_directories : [deadbeef_inc],
  dependencies : [pthread_lib, m_dep, dl_lib, dependency('blocks'), cc.find_library('dispatch')],
)

